--- a/Cloudents.Web/ClientApp/components/themes.less
+++ b/Cloudents.Web/ClientApp/components/themes.less
@@ -57,7 +57,9 @@
         display: block;
     }
 }
-
+body{
+    margin: 0;
+}
 .show_641 {
     @media(max-width:640px) {
         display: none;
@@ -66,4 +68,25 @@
 
 .upper {
     text-transform: uppercase;
+}
+.bg-ask{
+    background:@ask_color;
+}
+.bg-notes{
+    background:@note_color;
+}
+.bg-flashcard{
+    background:@flashcard_color;
+}
+.bg-tutor{
+    background:@tutor_color;
+}
+.bg-job{
+    background:@job_color;
+}
+.bg-book{
+    background:@book_color;
+}
+.bg-purchase{
+    background:@purchase_color;
 }
