--- a/Cloudents.Web/ClientApp/components/general/vertical-collection.less
+++ b/Cloudents.Web/ClientApp/components/general/vertical-collection.less
@@ -1,9 +1,8 @@
-﻿
+﻿@import '../themes.less';
 .round-icon {
     width: 38px;
     height: 38px;
     border-radius:50%;
-    background-color:red;
 }
 
 .selected {
