--- a/Cloudents.Web/ClientApp/components/sections/sections.less
+++ b/Cloudents.Web/ClientApp/components/sections/sections.less
@@ -156,7 +156,7 @@
 }*/
 
 section {
-    margin: 0 auto;
+    margin: 1em 0;
     max-width: 1000px;
 
     @media only screen and (max-width: 1030px) {
