--- a/Cloudents.Web/Views/Home/Index.cshtml
+++ b/Cloudents.Web/Views/Home/Index.cshtml
@@ -7,5 +7,6 @@
 
 
 @section scripts {
+@*<script src="~/dist/vendor.js" asp-append-version="true"></script>*@
     <script src="~/dist/main.js" asp-append-version="true"></script>
 }
