--- a/Cloudents.Web/ClientApp/components/sections/header/header.less
+++ b/Cloudents.Web/ClientApp/components/sections/header/header.less
@@ -12,7 +12,6 @@ header {
     width: 100%;
     /*height: 64px;
     line-height: 64px;*/
-
     /*.book path {
         fill: @squash
     }
@@ -44,8 +43,15 @@ header {
         -ms-grid-column: 3;
         grid-row: 1;
         grid-column: 3;
-        width:2em;
-        height:2em;
+        width: 2em;
+        height: 2em;
+    }
+
+    .searchTypes {
+        -ms-grid-row: 2;
+        -ms-grid-column: 5;
+        grid-row: 2;
+        grid-column: 5;
     }
 
     form {
