refactor structure and make project work

--- a/Cloudents.Web/ClientApp/components/navbar/navbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/navbar.less
@@ -1,6 +1,6 @@
-﻿@import "../../themes.less";
+﻿@import "../themes.less";
 aside {
-    .router-link-exact-active {
+    .router-link-active {
         background: yellow;
     }
 
