--- a/Cloudents.Web/ClientApp/components/navbar/navbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/navbar.less
@@ -43,10 +43,10 @@ aside {
         /*color: @dark;*/
     }
 
-    ul {
+    div {
         padding: 0;
         /*.displayGrid(0.5em);*/
-        li {
+        div {
             a {
                 width: 100em;
             }
