--- a/Cloudents.Web/ClientApp/components/general/vertical-collection.less
+++ b/Cloudents.Web/ClientApp/components/general/vertical-collection.less
@@ -1,14 +1,103 @@
-﻿@import '../themes.less';
-.round-icon {
-    width: 38px;
-    height: 38px;
-    border-radius:50%;
+﻿@import "../../mixin.less";
+.scroll {
+    padding-bottom: 100px;
+    white-space: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
-.selected {
-    border:3px solid green;
-}
-button {
-    background: transparent;
-    border: none;
+.box-nav-circle {
+    height: 114px;
+    overflow: hidden;
+
+
+
+    li {
+        display: inline-block;
+        list-style: none;
+        text-align: center;
+        width: 110px;
+
+        .hover {
+            border: 2px solid transparent;
+            .rounded-all(50%);
+            margin: 0 auto 5px;
+            padding: 6px;
+            width: 88px;
+        }
+    }
+
+    .selected {
+        .hover {
+            border-color: @color-white;
+        }
+    }
+
+    button {
+        color: @color-white;
+        font-size: 14px;
+        display: block;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
+    button:hover {
+        text-decoration: none;
+    }
+
+    span {
+        display: inline-block;
+        font-size: 30px;
+        height: 72px;
+        line-height: 68px;
+        text-align: center;
+        width: 72px;
+        .rounded-all(50%);
+        position: relative;
+    }
+
+    svg {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top: 50%;
+        bottom: 50%;
+        transform: translate(-50%, -50%);
+        /*display: block;
+        margin: auto;
+        vertical-align: middle;*/
+    }
+    /*img {
+        display: inline-block;
+        vertical-align: middle;
+    }*/
+    .box-1 span {
+        background: #0455a8;
+    }
+
+    .box-2 span {
+        background: #0455a8;
+    }
+
+    .box-3 span {
+        background: #f14d4d;
+    }
+
+    .box-4 span {
+        background: #52ab15;
+    }
+
+    .box-5 span {
+        background: #f49c20;
+    }
+
+    .box-6 span {
+        background: #8c3fbf;
+    }
+
+    .box-7 span {
+        background: #2cbfa5;
+    }
 }
