--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -1,48 +1,4 @@
-﻿
-//@font-light: "OpenSans-Light";
-//@font-bold: "OpenSans-Bold";
-//@font-regular: "OpenSans-Regular";
-//@font-italic: "OpenSans-Italic";
-@import "../../mixin.less";
-
-
-
-
-
-/*@font-face {
-    font-family: "OpenSans-Light";
-    src: url("fonts/OpenSans-Light.eot");
-    src: url("fonts/OpenSans-Light.woff2") format("woff2"), url("fonts/OpenSans-Light.woff") format("woff"), url("fonts/OpenSans-Light.ttf") format("truetype"), url("fonts/OpenSans-Light.svg#OpenSans-Light") format("svg"), url("fonts/OpenSans-Light.eot?#iefix") format("embedded-opentype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "OpenSans-Regular";
-    src: url("fonts/OpenSans-Regular.eot");
-    src: url("fonts/OpenSans-Regular.woff2") format("woff2"), url("fonts/OpenSans.woff") format("woff"), url("fonts/OpenSans.ttf") format("truetype"), url("fonts/OpenSans.svg#OpenSans") format("svg"), url("fonts/OpenSans-Regular.eot?#iefix") format("embedded-opentype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "OpenSans-Bold";
-    src: url("fonts/OpenSans-Bold.eot");
-    src: url("fonts/OpenSans-Bold.woff2") format("woff2"), url("fonts/OpenSans-Bold.woff") format("woff"), url("fonts/OpenSans-Bold.ttf") format("truetype"), url("fonts/OpenSans-Bold.svg#OpenSans-Bold") format("svg"), url("fonts/OpenSans-Bold.eot?#iefix") format("embedded-opentype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "OpenSans-Italic";
-    src: url("fonts/OpenSansItalic.eot");
-    src: url("fonts/OpenSansItalic.woff") format("woff"), url("fonts/OpenSansItalic.ttf") format("truetype"), url("fonts/OpenSansItalic.eot?#iefix") format("embedded-opentype");
-    font-weight: normal;
-    font-style: normal;
-}*/
-
-
-
+﻿@import "../../mixin.less";
 .box-header {
     background: @color-blue url("./img/doodels.png") no-repeat 50% 50%;
     background-size: cover;
