complete food fetching data

--- a/Cloudents.Web/ClientApp/components/themes.less
+++ b/Cloudents.Web/ClientApp/components/themes.less
@@ -8,7 +8,7 @@
 @tutor_color: #52ab15;
 @flashcard_color: #f14d4d;
 @ask_color: #0455a8;
-@purchase_color:#2cbfa5;
+@food_color:#2cbfa5;
 @nav_color:#3293f6;
 .displayInlineFlex() {
     display: -webkit-inline-box;
@@ -87,6 +87,6 @@ body{
 .bg-book{
     background:@book_color;
 }
-.bg-purchase{
-    background:@purchase_color;
+.bg-food{
+    background:@food_color;
 }
