Implment titile in menu action

--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -519,7 +519,7 @@ footer {
     }
 }
 
-.animenu__toggle {
+/*.animenu__toggle {
     background: transparent;
     display: none;
     cursor: pointer;
@@ -530,9 +530,9 @@ footer {
 
     &:hover {
     }
-}
+}*/
 
-.animenu__toggle__bar {
+/*.animenu__toggle__bar {
     display: block;
     width: 20px;
     height: 2px;
@@ -561,7 +561,7 @@ footer {
             transform: rotate(-45deg);
         }
     }
-}
+}*/
 
 // Clear some defaults
 
@@ -570,8 +570,8 @@ footer {
         padding-bottom: 44px;
 
         header {
-            position: relative;
-            z-index: 10;
+            //position: relative;
+           // z-index: 10;
 
             nav {
                 a {
@@ -603,7 +603,7 @@ footer {
         }
     }
 
-    .animenu {
+    /*.animenu {
         display: block;
 
         ul {
@@ -627,7 +627,7 @@ footer {
         a {
             text-decoration: none;
         }
-    }
+    }*/
 
     // First level -> main menu items
     // <nav class="animenu">
@@ -635,7 +635,7 @@ footer {
     //    ...
     //    </ul>
     //  </nav>
-    .animenu__nav {
+    /*.animenu__nav {
 
         > li {
             position: relative;
@@ -667,7 +667,7 @@ footer {
                 }
             }
         }
-    }
+    }*/
 
     // Second level
     // <nav class="animenu">
@@ -677,7 +677,7 @@ footer {
     //      </li>
     //    </ul>
     //  </nav>
-    .animenu__nav__child {
+    /*.animenu__nav__child {
         min-width: 100%;
         position: absolute;
         top: 100%;
@@ -715,7 +715,7 @@ footer {
                 color: #fff;
             }
         }
-    }
+    }*/
 
     // The main breakpoint is 767px
     // Adjust the first and second levels display
@@ -724,7 +724,7 @@ footer {
         margin-left: 50px;
     }
 
-    .animenu {
+    /*.animenu {
         position: absolute;
         top: 32px;
         width: auto;
@@ -739,7 +739,7 @@ footer {
     .animenu__nav,
     .animenu__nav__child {
         display: none;
-    }
+    }*/
 
     // First level -> main menu items
     // <nav class="animenu">
@@ -747,7 +747,7 @@ footer {
     //    ...
     //    </ul>
     //  </nav>
-    .animenu__nav {
+    /*.animenu__nav {
 
         > li {
             width: 100%;
@@ -779,7 +779,7 @@ footer {
         a:hover {
             color: #fff;
         }
-    }
+    }*/
 
     // Second level
     // <nav class="animenu">
@@ -789,7 +789,7 @@ footer {
     //      </li>
     //    </ul>
     //  </nav>
-    .animenu__nav__child {
+    /*.animenu__nav__child {
         position: static;
         background-color: @color-white;
         margin: 0;
@@ -804,7 +804,7 @@ footer {
         a {
             width: 100%;
         }
-    }
+    }*/
 }
 
 // Expanding the animenu
@@ -815,10 +815,10 @@ footer {
 //      </li>
 //    </ul>
 //  </nav>
-.animenu__nav--open {
+/*.animenu__nav--open {
     display: block !important;
 
     & .animenu__nav__child {
         display: block;
     }
-}
+}*/
