partial header full page UI

--- a/Cloudents.Web/ClientApp/components/pages/page.less
+++ b/Cloudents.Web/ClientApp/components/pages/page.less
@@ -176,9 +176,14 @@ section {
         font-size: 20px;
         text-align: center;
     }*/
-
     @media @tablet_641,@desktop_1366 {
         grid-template-columns: 220px auto;
         -ms-grid-columns: 220px auto;
     }
+    
+}
+.overlay {
+    z-index: 2;
+    opacity: 0.7;
+    background: #979797;
 }
