--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -1,92 +1,134 @@
-﻿@import "../themes.less";
+﻿@font-bold: "OpenSans-Bold";
+@font-regular: "OpenSans-Regular";
+@font-semibold: "OpenSans-Semibold";
+
+@color-white: #fff;
+@color-black: #000;
+@color-light-grey-5: #ddd;
+@color-dark-blue: #0455a8;
+@color-dark-red: #c30000;
+@color-suggest: #bbbbbb;
+
+.box-shadow (@string) {
+    -webkit-box-shadow: @string;
+    -moz-box-shadow: @string;
+    box-shadow: @string;
+}
+
+.rounded-all(@radius) {
+    border-radius: (@radius);
+}
+
+
+.toolbar__content {
+    .box-shadow (0 2px 4px 0 rgba(0, 0, 0, 0.1));
+    border: 1px solid @color-light-grey-5;
+}
+
 header {
-    display: grid;
-    display: -ms-grid;
-    grid-template-columns: min-content 1em 5em 1em 100fr 1em 5em;
-    -ms-grid-columns: min-content 1em 5em 1em 100fr 1em 5em;
-    -ms-grid-rows: auto auto auto;
-    align-content: flex-end;
-    /*label:last-of-type {
-        z-index: 5;
-    }*/
-    width: 100%;
-    /*height: 64px;
-    line-height: 64px;*/
-    /*.book path {
-        fill: @squash
-    }
-
-    .book path {
-        fill: @squash
-    }*/
-    @media @phone {
-        height: 130px;
-    }
-
-    &.section-open {
-        height: 130px;
-
-        @media @phone {
-            height: 180px;
-        }
-    }
+    min-width: 700px;
 
     .logo {
-        -ms-grid-row: 1;
-        -ms-grid-column: 1;
-        grid-row: 1;
-        grid-column: 1;
-    }
+        border-right: 1px solid @color-light-grey-5;
+        display: block;
+        height: 100%;
+        line-height: 64px;
+        margin: 0 !important;
+        text-align: center;
+        width: 214px;
 
-    .section-icon {
-        -ms-grid-row: 1;
-        -ms-grid-column: 3;
-        grid-row: 1;
-        grid-column: 3;
-        width: 2em;
-        height: 2em;
-    }
-
-    .searchTypes {
-        -ms-grid-row: 2;
-        -ms-grid-column: 5;
-        grid-row: 2;
-        grid-column: 5;
-    }
-
-    form {
-        -ms-grid-row: 1;
-        -ms-grid-column: 5;
-        grid-row: 1;
-        grid-column: 5;
-
-        input {
-            width: 100%;
+        img {
+            display: inline-block;
+            vertical-align: middle;
         }
     }
-    /*#notification {
-        grid-row: 1;
-        grid-column: 5;
-        -ms-grid-row: 1;
-        -ms-grid-column: 5;
-        -ms-grid-column-align: end;
-        justify-self: end;
-    }*/
-    /*input[type="radio"] + label {
+
+
+    .icon {
+        border-right: 1px solid @color-light-grey-5;
+        height: 100%;
+        line-height: 64px;
         text-align: center;
-        display: inline-block;
-        text-decoration: none;
-        cursor: pointer;
-        font-size: 14px;
-        margin: 0 1em 0 0;
-        height: 22px;
-        line-height: 22px;
-        color: white;
-        border-radius: 10px;
-        border: solid 1px;
-        background: @pinkish-grey;
-        border: none;
-        padding: 2px 15px;
-        font-family: openSans;
-    }*/
+        width: 70px;
+
+        .item {
+            height: 1.5em;
+            width: 1.5em;
+        }
+
+        img {
+            display: inline-block;
+            vertical-align: middle;
+        }
+    }
+
+    .box-header-search {
+        padding: 0 17px;
+
+        input[type="text"] {
+            color: @color-dark-blue;
+            font-size: 16px;
+            letter-spacing: -0.4px;
+            height: 22px;
+            padding: 0 12px;
+            width: 280px;
+        }
+
+        input[type="text"]:focus {
+            outline: none;
+        }
+
+        input::-webkit-input-placeholder {
+            color: @color-dark-blue;
+        }
+
+        input::-moz-placeholder {
+            color: @color-dark-blue;
+        }
+
+        input:-ms-input-placeholder {
+            color: @color-dark-blue;
+        }
+
+        input:-moz-placeholder {
+            color: @color-dark-blue;
+        }
+
+        input:-webkit-autofill {
+            -webkit-box-shadow: 0 0 0 30px white inset;
+        }
+
+        button {
+            float: left;
+            height: 22px;
+
+            img {
+                display: block;
+            }
+        }
+    }
+
+    .box-notification {
+        border-left: 1px solid @color-light-grey-5;
+        display: block;
+        height: 100%;
+        margin: 0 !important;
+        position: relative;
+        width: 64px;
+    }
+
+    .counter {
+        background: @color-dark-red;
+        border: 1px solid @color-white;
+        .rounded-all(50%);
+        color: @color-white;
+        font-size: 9px;
+        height: 16px;
+        line-height: 14px;
+        position: absolute;
+        text-align: center;
+        top: 16px;
+        right: 16px;
+        width: 16px;
+    }
 }
