--- a/Cloudents.Web/ClientApp/components/pages/results/ResultFood.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/ResultFood.less
@@ -109,6 +109,8 @@
             -ms-transform: translateY(-50%);
             -webkit-transform: translateY(-50%);
             max-width: 100%;
+            height: 10em;
+            width: 10em;
         }
     }
 
