Starting to work on aside.

--- a/Cloudents.Web/ClientApp/components/navbar/navbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/navbar.less
@@ -1,51 +1,48 @@
-﻿@import "../themes.less";
+﻿//@import "../themes.less";
 aside {
-    .router-link-active {
+    background:blue;
+    /*.router-link-active {
         background: yellow;
-    }
+    }*/
 
-    height: 100vh;
-    background: @nav_color;
-    -ms-grid-column: 1;
-    grid-column: 1;
+    //height: 100vh;
+    //background: @nav_color;
+    //-ms-grid-column: 1;
+    //grid-column: 1;
     /*grid-area: aside;*/
-    padding: 1em;
+    //padding: 1em;
     /*@media @desktop_1366 {
                 padding: 1em 0 1em 15%;
             }
 
             position: fixed;*/
-    .VueCarousel-inner {
+    /*.VueCarousel-inner {
         display: block;
-    }
+    }*/
 
-    @media @tablet_641,@desktop_1366 {
+    /*@media @tablet_641,@desktop_1366 {
         padding-left: 0;
-    }
+    }*/
 
-    width: 220px;
+    //width: 220px;
 
-    @media(max-width:640px) {
+    /*@media(max-width:640px) {
         position: absolute;
         background: white;
         transform-origin: 0% 0%;
         transform: translate(-100%, 0);
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-    }
+    }*/
 
-    label {
-        /*width: 59px;
-                height: 14px;*/
+    /*label {
         font-family: OpenSans;
         font-size: 12px;
         letter-spacing: -0.2px;
         text-align: left;
-        /*color: @dark;*/
-    }
+    }*/
 
-    div {
+    /*div {
         padding: 0;
-        /*.displayGrid(0.5em);*/
         div {
             a {
                 width: 100em;
@@ -83,17 +80,10 @@ aside {
 
             span {
                 margin-left: 1em;
-                /*line-height: @circle_size;*/
             }
-            /*svg {
-                top: 25%;
-                left: 20%;
-                position: absolute;
-            }*/
             &:last-of-type {
-                /*margin-bottom: 0.8em;*/
             }
         }
-    }
+    }*/
 }
 
