--- a/Cloudents.Web/ClientApp/components/themes.less
+++ b/Cloudents.Web/ClientApp/components/themes.less
@@ -69,7 +69,7 @@ body{
 .upper {
     text-transform: uppercase;
 }
-.bg-ask{
+/*.bg-ask{
     background:@ask_color;
 }
 .bg-note{
@@ -89,4 +89,4 @@ body{
 }
 .bg-food{
     background:@food_color;
-}
+}*/
