Continue working on aside.

--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -27,3 +27,40 @@
     background: -ms-linear-gradient(top, @startColor, @endColor);
     background: -o-linear-gradient(top, @startColor, @endColor);
 }
+
+
+
+//new stuff
+
+@Ask-a-Question: #0455a8;
+@Class-Material: #320161;
+@Flashcards: #f14d4d;
+@Tutors: #52ab15;
+@Textbooks: #8c3fbf;
+@Jobs: #f49c20;
+@Food: #2cbfa5;
+@Upload: #94b7cb;
+@Post: #414141;
+@Create-Flashcards: #a40115;
+@Chat: #9ccdff;
+@My-Courses: #2adaff;
+@My-Likes: #7ed321;
+@Settings: #07305a;
+@Site-Background: #eeeeee;
+@PersonalizationStrip: #f5a623;
+@Notificaion-Text-Circle: #c30000;
+@Spitball-Text: #003b78;
+@Sub-Filter: #1e59a8;
+@Suggestion-Title-Background: #bbbbbb;
+@Feed-Body-Text: #222222;
+@Chat-Suggestion-Icon-Background: #ebbc18;
+@Tutor-Price: #ff6f00;
+@Book-Info: #000000;
+@Spitball-Main-color: #3293f6;
+@Dividers: #dddddd;
+@Replay-bubble-on-chat: #cdffc4;
+@Post-massege-on-chat: #caedff;
+@Chat-Background: #e2e0d5;
+@Feed-Like-count: #5d5d5d;
+@Selected-Vertical: #2a7bcf;
+@Feed-Date: #888b8e;
