Side menu done. wihout reposivy

--- a/Cloudents.Web/ClientApp/components/general/link-verticals.less
+++ b/Cloudents.Web/ClientApp/components/general/link-verticals.less
@@ -90,6 +90,70 @@ v-subheader {
         height: 15.6px;
     }
 }
+.bg-upload {
+    background: @Upload;
+
+    svg {
+        width: 13.5px;
+        height: 16px;
+    }
+}
+.bg-post {
+    background: @Post;
+
+    svg {
+        width: 14.3px;
+        height: 14.3px;
+    }
+}
+.bg-create {
+    background: #a40014;
+
+    svg {
+        width: 19.2px;
+        height: 15.6px;
+    }
+}
+.bg-chat {
+    background: @Chat;
+
+    svg {
+        width: 14.7px;
+        height: 12.7px;
+    }
+}
+.bg-chat {
+    background: @Chat;
+
+    svg {
+        width: 14.7px;
+        height: 12.7px;
+    }
+}
+.bg-course {
+    background: #2adbff;
+
+    svg {
+        width: 16px;
+        height: 16px;
+    }
+}
+.bg-like {
+    background: @My-Likes;
+
+    svg {
+        width: 13.4px;
+        height: 16px;
+    }
+}
+.bg-setting {
+    background: @Settings;
+
+    svg {
+        width: 16.8px;
+        height: 16.8px;
+    }
+}
 /*.item {
         width: 40px;
         height: 40px;
