Starting to work on the header.

--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -64,3 +64,10 @@
 @Feed-Like-count: #5d5d5d;
 @Selected-Vertical: #2a7bcf;
 @Feed-Date: #888b8e;
+
+
+.inTheMiddle() {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
