--- a/Cloudents.Web/ClientApp/components/general/link-verticals.less
+++ b/Cloudents.Web/ClientApp/components/general/link-verticals.less
@@ -22,9 +22,7 @@ v-subheader {
     border-radius: 50%;
     width: 32px;
     height: 32px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .inTheMiddle();
 }
 
 .bg-ask {
