--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -1,4 +1,5 @@
-﻿@font-bold: "OpenSans-Bold";
+﻿@import "../../mixin.less";
+/*@font-bold: "OpenSans-Bold";
 @font-regular: "OpenSans-Regular";
 @font-semibold: "OpenSans-Semibold";
 
@@ -17,10 +18,10 @@
 
 .rounded-all(@radius) {
     border-radius: (@radius);
-}
+}*/
 
 
-.toolbar__content {
+/*.toolbar__content {
     .box-shadow (0 2px 4px 0 rgba(0, 0, 0, 0.1));
     border: 1px solid @color-light-grey-5;
 }
@@ -131,4 +132,16 @@ header {
         right: 16px;
         width: 16px;
     }
+}*/
+.logo-link {
+    width: 216px; //note this is the navbar width as on navbar.vue
+    .inTheMiddle();
+    border-right: 1px solid #dddddd;
+    height: 100%;
 }
+.logo {
+    width: 128px;
+    height: 24.6px;
+}
+
+
