Header full design

--- a/Cloudents.Web/ClientApp/components/general/link-verticals.less
+++ b/Cloudents.Web/ClientApp/components/general/link-verticals.less
@@ -31,6 +31,8 @@ v-subheader {
     svg {
         width: 18.7px;
         height: 13px;
+
+       
     }
 }
 
@@ -41,6 +43,10 @@ v-subheader {
     svg {
         width: 11.8px;
         height: 14.3px;
+
+        .fill {
+            fill: #fff;
+        }
     }
 }
 
@@ -152,7 +158,4 @@ v-subheader {
         height: 16.8px;
     }
 }
-/*.item {
-        width: 40px;
-        height: 40px;
-    }*/
+
