--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -7,11 +7,16 @@ html {
 }
 
 body {
-    margin: 0;
+    //margin: 0;
     background-color: @Site-Background;
 }
-
-article,
+input[type="text"]:focus {
+    outline: none;
+}
+button {
+    margin:0;
+}
+/*article,
 aside,
 details,
 figcaption,
@@ -25,22 +30,19 @@ nav,
 section,
 summary {
     display: block;
-}
-
-audio,
+}*/
+/*audio,
 canvas,
 progress,
 video {
     display: inline-block;
     vertical-align: baseline;
-}
-
+}*/
 /*audio:not([controls]) {
     display: none;
     height: 0;
 }*/
-
-[hidden],
+/*[hidden],
 template {
     display: none;
 }
@@ -48,15 +50,14 @@ template {
 a {
     background-color: transparent;
     
-}
-
+}*/
 a:active,
 a:hover {
     outline: 0;
     text-decoration: none;
 }
 
-abbr[title] {
+/*abbr[title] {
     border-bottom: 1px dotted;
 }
 
@@ -256,4 +257,4 @@ body {
 
 p, div {
     word-wrap: break-word;
-}
+}*/
