--- a/Cloudents.Web/ClientApp/components/pages/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/ResultItem.less
@@ -15,9 +15,9 @@
     box-shadow: @string;
 }
 
-.container-box {
+/*.container-box {
     padding: 17px;
-}
+}*/
 .text-note {
     color: @color-dark-purple;
 }
