--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -1,4 +1,9 @@
 ﻿@import "../../mixin.less";
+
+.wrapper {
+    width: 100%;
+}
+
 .box-header {
     background: @color-blue url("./img/doodels.png") no-repeat 50% 50%;
     background-size: cover;
@@ -571,8 +576,7 @@ footer {
 
         header {
             //position: relative;
-           // z-index: 10;
-
+            // z-index: 10;
             nav {
                 a {
                     display: block;
