--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -16,6 +16,9 @@ input[type="text"]:focus {
 button {
     margin:0;
 }
+.application--light {
+    background: @Site-Background;
+}
 /*article,
 aside,
 details,
