--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -71,3 +71,14 @@
     justify-content: center;
     align-items: center;
 }
+
+.giveMeEllipsis(@lines,@line-height) {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: @lines; /* number of lines to show */
+    line-height: @line-height; /* fallback */
+    max-height: (@lines*@line-height); /* fallback */
+}
+
