Code to manipulate svg verticals colors

--- a/Cloudents.Web/ClientApp/components/general/link-verticals.less
+++ b/Cloudents.Web/ClientApp/components/general/link-verticals.less
@@ -24,14 +24,14 @@ v-subheader {
     height: 32px;
     .inTheMiddle();
 }
-svg {
+/*svg {
     /deep/ .fill {
         fill: #fff;
     }
-}
+}*/
 
 .bg-ask {
-    background-color: @Ask-a-Question;
+  //  background-color: @Ask-a-Question;
 
     svg {
         width: 18.7px;
@@ -43,7 +43,6 @@ svg {
 
 
 .bg-note {
-    background: @Class-Material;
 
     svg {
         width: 11.8px;
@@ -56,7 +55,6 @@ svg {
 }
 
 .bg-flashcard {
-    background: @Flashcards;
 
     svg {
         width: 16px;
@@ -65,7 +63,6 @@ svg {
 }
 
 .bg-tutor {
-    background: @Tutors;
 
     svg {
         width: 14.2px;
@@ -74,7 +71,6 @@ svg {
 }
 
 .bg-job {
-    background: @Jobs;
 
     svg {
         width: 8px;
@@ -83,7 +79,6 @@ svg {
 }
 
 .bg-book {
-    background: @Textbooks;
 
     svg {
         width: 17.8px;
@@ -92,7 +87,6 @@ svg {
 }
 
 .bg-food {
-    background: @Food;
 
     svg {
         width: 12.5px;
@@ -100,7 +94,6 @@ svg {
     }
 }
 .bg-upload {
-    background: @Upload;
 
     svg {
         width: 13.5px;
@@ -108,7 +101,6 @@ svg {
     }
 }
 .bg-post {
-    background: @Post;
 
     svg {
         width: 14.3px;
@@ -116,7 +108,6 @@ svg {
     }
 }
 .bg-create {
-    background: #a40014;
 
     svg {
         width: 19.2px;
@@ -124,7 +115,6 @@ svg {
     }
 }
 .bg-chat {
-    background: @Chat;
 
     svg {
         width: 14.7px;
@@ -132,7 +122,6 @@ svg {
     }
 }
 .bg-chat {
-    background: @Chat;
 
     svg {
         width: 14.7px;
@@ -140,7 +129,6 @@ svg {
     }
 }
 .bg-course {
-    background: #2adbff;
 
     svg {
         width: 16px;
@@ -148,7 +136,6 @@ svg {
     }
 }
 .bg-like {
-    background: @My-Likes;
 
     svg {
         width: 13.4px;
@@ -156,7 +143,6 @@ svg {
     }
 }
 .bg-setting {
-    background: @Settings;
 
     svg {
         width: 16.8px;
