--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -177,6 +177,7 @@ header {
         flex-grow: 2;
         font-size: 16px;
         color: @Class-Material;
+        letter-spacing: -0.4px;
     }
     //width:100%;
 }
