--- a/Cloudents.Web/ClientApp/components/pages/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/ResultItem.less
@@ -8,11 +8,19 @@ a {
     height: 100%;
     
 }
-
+.cell-title {
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: -0.3px;
+}
 p {
-    .giveMeEllipsis(3,1.29);
+    //.giveMeEllipsis(3,1.29);
     font-size: 14px;
     color: #000;
+    height: 72px;
+    margin-right: 70px;
+    line-height: 1.29;
+    letter-spacing: -0.3px;
 }
 
 img {
@@ -30,5 +38,6 @@ img {
 .bottom {
     flex-grow: 0;
     color: #9b9b9b;
-    font-size:10px;
+    font-size: 10px;
+    letter-spacing: -0.2px;
 }
