--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -3,70 +3,84 @@
 @logoWidth: 215px;
 @iconWidth: 50px;
 
-.logo-link {
-    width: @logoWidth; //note this is the navbar width as on navbar.vue
-    .inTheMiddle();
-    //border-right: 1px solid #dddddd;
-    //height: 100%;
-}
-
-.line {
-    border: 1px solid #ddd;
-    //height:100%;
-}
-
-.toolbar__content {
-    border-bottom: 1px solid #ddd;
-}
-
 .header {
-    background: #fff;
-}
-
-.first-header {
-    border-bottom: 1px solid #ddd;
-}
-
-
-.logo {
-    width: 128px;
-    height: 24.6px;
-}
-
-.icon {
-    width: @iconWidth;
-}
-
-.item {
-    width: 34.6px;
-    height: 24px;
-}
-
-.verticals {
-    margin-left: @iconWidth + @logoWidth;
-}
-
-.box-header-search {
-    flex-grow: 2;
-    display: flex;
-    align-items: stretch;
-    align-content: center;
-
-    input {
-        flex-grow: 2;
-        font-size: 16px;
-        color: @Class-Material;
-        letter-spacing: -0.4px;
+    .logo-link {
+        width: @logoWidth; //note this is the navbar width as on navbar.vue
+        .inTheMiddle();
+        //border-right: 1px solid #dddddd;
+        //height: 100%;
     }
-    //width:100%;
-}
 
-.notification {
-    width: 60px;
-    .inTheMiddle();
+    .line {
+        border: 1px solid #ddd;
+        //height:100%;
+    }
 
-    svg {
-        width: 15.8px;
-        height: 18px;
+    .toolbar__content {
+        border-bottom: 1px solid #ddd;
+    }
+
+    .header {
+        background: #fff;
+    }
+
+    .first-header {
+        border-bottom: 1px solid #ddd;
+    }
+
+
+    .logo {
+        width: 128px;
+        height: 24.6px;
+    }
+
+    .icon {
+        width: @iconWidth;
+    }
+
+    .item {
+        width: 34.6px;
+        height: 24px;
+    }
+
+    .verticals {
+        margin-left: @iconWidth + @logoWidth;
+    }
+
+    .box-header-search {
+        flex-grow: 2;
+        display: flex;
+        align-items: stretch;
+        align-content: center;
+
+        input {
+            flex-grow: 2;
+            font-size: 16px;
+            color: @Class-Material;
+            letter-spacing: -0.4px;
+        }
+        //width:100%;
+    }
+
+    .notification {
+        width: 60px;
+        .inTheMiddle();
+
+        svg {
+            width: 15.8px;
+            height: 18px;
+        }
+    }
+
+    .chip {
+        background: #bbb;
+        color: #FFF;
+        letter-spacing: -0.3px;
+        font-size: 14px;
+        border-radius: 10px;
+
+        &.chip--selected {
+            background: #0455a8;
+        }
     }
 }
