--- a/Cloudents.Web/ClientApp/components/pages/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/pages/results/Result.less
@@ -1,16 +1,32 @@
 ﻿@import "../../../mixin.less";
-.chip:focus:not(.chip--disabled) {
-    background: blue !important;
-}
-/*.content {
-        background: #eeeeee;
-    }*/
-.sort {
-    border-left: 1px solid #ddd;
-}
 
-h5 {
-    font-weight:600;
-    text-align: center;
-    color: @Spitball-Text;
+.sec-result {
+    .cell {
+        background: #fff;
+    }
+
+    h5 {
+        font-weight: 600;
+        text-align: center;
+        color: @Spitball-Text;
+    }
+
+    .s-divider {
+        width: 0px;
+        border-left: solid 1px @Spitball-Main-color;
+    }
+
+    .chip {
+        background: transparent;
+        color: @Spitball-Main-color;
+        border: 1px solid @Spitball-Main-color;
+        border-radius: 10px;
+        letter-spacing: -0.2px;
+        font-size: 12px;
+
+        &.chip--selected {
+            background: #fff;
+            color: @Spitball-Main-color; //override
+        }
+    }
 }
